[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/2ButtonGame.gd" type="Script" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/BackgroundEnvironment.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/BackgroundScenery.tscn" type="PackedScene" id=4]

[node name="2ButtonGame" type="Node2D"]

script/script = ExtResource( 1 )

[node name="JetpackPlayer" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 78, 264 )

[node name="BackgroundEnvironment" parent="." instance=ExtResource( 3 )]

[node name="BackgroundScenery" parent="." instance=ExtResource( 4 )]

layer = -1

[node name="ScoreLayer" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="CurrentScore" type="Label" parent="ScoreLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 17.0
margin/right = 60.0
margin/bottom = 31.0
text = "Current: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HighScore" type="Label" parent="ScoreLayer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = 38.0
margin/right = 60.0
margin/bottom = 52.0
text = "Best: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2


